<resources>
    <string name="app_name">Lucky star</string>

    <string name="title_activity_world_wide_web">WorldWideWebActivity</string>
    <string name="content_description">Description for main hero loader image</string>
    <string name="loading_txt">Loading</string>
    <string name="use_chat_btn_txt">Use chat</string>
    <string name="chat_bot_by_openai_title_txt">OpenAI receipt chat</string>
    <string name="ask_question_txt">Ask question…</string>
    <string name="content_description_icon">send to chat icon</string>
    <string name="leave_fab">Leave Fab</string>
    <string name="dish_image">Dish Image</string>
    <string name="get_more_information_txt">Get more information</string>
    <string name="open">Open</string>
    <string name="loading_article_title">Loading article title…</string>
    <string name="article_image">Article Image</string>
    <string name="top_dishes_to_prepare_in_the_morning">Top dishes to prepare in the morning</string>
    <string name="wait_a_second_i_m_thinking">Wait a second, I\'m thinking…</string>
</resources>