<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="9dp"
    android:elevation="5dp"
    android:padding="5dp"
    app:cardCornerRadius="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/article_image"
            android:contentDescription="@string/article_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/article_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_text_back"
            android:paddingVertical="9dp"
            android:paddingHorizontal="19dp"
            android:text="@string/loading_article_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/article_image" />

        <TextView
            android:id="@+id/open_button"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/rounded_shape_open_back"
            android:clickable="true"
            android:paddingHorizontal="25dp"
            android:focusable="true"
            android:shadowRadius="40"
            android:textAllCaps="false"
            android:text="@string/open"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>